--- a/static/index.html
+++ b/static/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-<h1>This is a fucking website.</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>COBOL Web Server LOL</title>
+</head>
+<body>
+    <h1>Hello bitches</h1>
+</body>
+</html>
